--- a/app/res/layout/screen_connectid_photo_capture.xml
+++ b/app/res/layout/screen_connectid_photo_capture.xml
@@ -62,6 +62,24 @@
             android:layout_gravity="center"
             android:layout_margin="@dimen/activity_horizontal_margin"
             android:text="@string/connectid_photo_capture_take_photo_button" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/save_photo_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/activity_horizontal_margin"
+            android:enabled="false"
+            android:text="@string/connectid_photo_capture_save_photo_button" />
+
+        <TextView
+            android:id="@+id/errorTextView"
+            android:textStyle="bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/holo_red_light"
+            android:textSize="14sp"
+            android:visibility="gone" />
     </LinearLayout>
 
 </layout>
