--- a/app/res/layout/fragment_recovery_code.xml
+++ b/app/res/layout/fragment_recovery_code.xml
@@ -15,7 +15,7 @@
             android:layout_marginTop="40dp"
             android:layout_centerHorizontal="true"
             android:contentDescription="@null"
-            android:src="@drawable/ccc_logo_full" />
+            android:src="@drawable/commcare_connect_logo" />
 
         <View
             android:id="@+id/divider"
