--- a/app/res/layout/screen_personalid_phone_verify.xml
+++ b/app/res/layout/screen_personalid_phone_verify.xml
@@ -16,7 +16,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="40dp"
             android:contentDescription="@null"
-            android:src="@drawable/ccc_logo_full" />
+            android:src="@drawable/commcare_connect_logo" />
 
         <View
             android:id="@+id/divider"
