--- a/app/res/layout/screen_personalid_phoneno.xml
+++ b/app/res/layout/screen_personalid_phoneno.xml
@@ -27,7 +27,7 @@
                 android:layout_height="40dp"
                 android:layout_marginTop="60dp"
                 android:layout_gravity="center"
-                android:src="@drawable/ccc_logo_full" />
+                android:src="@drawable/commcare_connect_logo" />
 
             <View
                 android:id="@+id/divider"
