--- a/app/res/layout/screen_personalid_name.xml
+++ b/app/res/layout/screen_personalid_name.xml
@@ -1,36 +1,33 @@
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/NameFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white"
-        tools:context="org.commcare.fragments.connectId.PersonalIdNameFragment">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
         <ScrollView
             android:id="@+id/firstLayout"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="match_parent"
+            android:background="@color/white"
             app:layout_constraintTop_toTopOf="parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            tools:context="org.commcare.fragments.connectId.PersonalIdNameFragment">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/company_logo"
                     android:layout_width="wrap_content"
-                    android:layout_height="40dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="60dp"
                     android:layout_gravity="center"
+                    android:padding="16dp"
                     android:src="@drawable/commcare_connect_logo" />
 
                 <View
                     android:id="@+id/divider"
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginHorizontal="20dp"
                     android:layout_marginTop="40dp"
@@ -59,14 +56,14 @@
                     android:orientation="horizontal">
 
                     <LinearLayout
-                        android:layout_width="42dp"
-                        android:layout_height="42dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:background="@drawable/connect_side_icon_bg"
                         android:gravity="center">
 
                         <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="42dp"
+                            android:layout_height="42dp"
                             android:padding="1dp"
                             android:src="@drawable/ic_outline_person_24" />
 
@@ -76,14 +73,14 @@
                         android:id="@+id/nameTextValue"
                         android:layout_width="match_parent"
                         android:layout_height="55dp"
-                        android:layout_marginLeft="16dp"
+                        android:layout_marginStart="16dp"
                         android:background="@drawable/connect_edit_text_bg"
                         android:hint="@string/connect_register_name"
                         android:inputType="textPersonName"
                         android:imeOptions="actionNext"
                         android:paddingStart="16dp"
                         android:textColorHint="@color/connect_grey"
-                        tools:ignore="RtlSymmetry" />
+                        />
 
                 </LinearLayout>
 
@@ -108,10 +105,9 @@
                     android:layout_marginEnd="16dp"
                     android:gravity="start|center"
                     android:text="@string/review"
-                    android:drawableRight="@drawable/connect_right_arrow"
+                    android:drawableEnd="@drawable/connect_right_arrow"
                     />
 
             </LinearLayout>
         </ScrollView>
-    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
