--- a/app/res/layout/screen_connectid_photo_capture.xml
+++ b/app/res/layout/screen_connectid_photo_capture.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -48,10 +49,10 @@
 
         <ImageView
             android:id="@+id/photo_image_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/activity_horizontal_margin"
+            android:layout_width="160dp"
+            android:layout_height="160dp"
             android:layout_gravity="center"
+            android:layout_margin="@dimen/activity_horizontal_margin"
             android:contentDescription="@null"
             android:src="@drawable/baseline_person_24" />
 
@@ -68,18 +69,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/activity_horizontal_margin"
             android:enabled="false"
             android:text="@string/connectid_photo_capture_save_photo_button" />
 
         <TextView
             android:id="@+id/errorTextView"
+            tools:text="Error uploading photo"
             android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/activity_horizontal_margin"
+            android:layout_gravity="center_horizontal"
             android:textColor="@android:color/holo_red_light"
-            android:textSize="14sp"
-            android:visibility="gone" />
+            android:textSize="14sp" />
     </LinearLayout>
 
 </layout>
