-fix connectid activity call

--- a/app/res/navigation/nav_graph_personalid.xml
+++ b/app/res/navigation/nav_graph_personalid.xml
@@ -132,6 +132,9 @@
         <action
             android:id="@+id/action_personalid_phone_fragment_to_personalid_biometric_config"
             app:destination="@id/personalid_biometric_config" />
+        <action
+            android:id="@+id/action_personalid_phone_fragment_self"
+            app:destination="@id/personalid_phone_fragment" />
     </fragment>
 
     <fragment
