--- a/app/res/layout/screen_personalid_phoneno.xml
+++ b/app/res/layout/screen_personalid_phoneno.xml
@@ -7,7 +7,7 @@
             android:layout_height="match_parent"
             android:background="@color/white"
             android:orientation="vertical"
-            tools:context="org.commcare.fragments.connectId.PersonalIdPhoneFragment">
+            tools:context="org.commcare.fragments.personalId.PersonalIdPhoneFragment">
 
         <LinearLayout
             android:layout_width="match_parent"
