--- a/app/res/navigation/nav_graph_personalid.xml
+++ b/app/res/navigation/nav_graph_personalid.xml
@@ -92,6 +92,9 @@
             android:name="isCancellable"
             android:defaultValue="true"
             app:argType="boolean" />
+        <action
+            android:id="@+id/action_personalid_message_display_to_personalid_phone_fragment"
+            app:destination="@id/personalid_phone_fragment" />
     </dialog>
 
     <fragment
