-made the constant size of connect logo

--- a/app/res/layout/screen_personalid_phoneno.xml
+++ b/app/res/layout/screen_personalid_phoneno.xml
@@ -16,8 +16,8 @@
 
             <ImageView
                 android:id="@+id/company_logo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
                 android:padding="16dp"
                 android:layout_marginTop="60dp"
                 android:layout_gravity="center"
