--- a/app/res/layout/screen_personalid_photo_capture.xml
+++ b/app/res/layout/screen_personalid_photo_capture.xml
@@ -5,14 +5,14 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="match_parent"
         android:background="@color/white"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/company_logo"
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="40dp"
             android:contentDescription="@null"
@@ -20,7 +20,7 @@
 
         <View
             android:id="@+id/divider"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginHorizontal="20dp"
             android:background="@color/connect_light_grey" />
@@ -38,7 +38,7 @@
 
         <TextView
             android:id="@+id/subtitle"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="start"
             android:layout_margin="@dimen/activity_horizontal_margin"
@@ -81,6 +81,7 @@
             android:layout_margin="@dimen/activity_horizontal_margin"
             android:layout_gravity="center_horizontal"
             android:textColor="@android:color/holo_red_light"
+            android:visibility="gone"
             android:textSize="14sp" />
     </LinearLayout>
 
