-captured connect logo height in dimens constant

--- a/app/res/layout/screen_personalid_phoneno.xml
+++ b/app/res/layout/screen_personalid_phoneno.xml
@@ -17,7 +17,7 @@
             <ImageView
                 android:id="@+id/company_logo"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="@dimen/personalid_logo_height"
                 android:padding="16dp"
                 android:layout_marginTop="60dp"
                 android:layout_gravity="center"
