--- a/app/res/layout/fragment_recovery_code.xml
+++ b/app/res/layout/fragment_recovery_code.xml
@@ -11,7 +11,7 @@
         <ImageView
             android:id="@+id/company_logo"
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_height="@dimen/personalid_logo_height"
             android:layout_marginTop="40dp"
             android:layout_centerHorizontal="true"
             android:contentDescription="@null"
