--- a/app/res/values/dimens.xml
+++ b/app/res/values/dimens.xml
@@ -161,4 +161,5 @@
     <dimen name="connect_message_corner_radius">16dp</dimen>
 
     <dimen name="corner_radius_small_5dp">5dp</dimen>
+    <dimen name="personalid_logo_height">100dp</dimen>
 </resources>
