--- a/app/res/layout/screen_personalid_name.xml
+++ b/app/res/layout/screen_personalid_name.xml
@@ -19,7 +19,7 @@
                 <ImageView
                     android:id="@+id/company_logo"
                     android:layout_width="wrap_content"
-                    android:layout_height="@dimen/personalid_logo_height"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="60dp"
                     android:layout_gravity="center"
                     android:padding="16dp"
