--- a/app/res/layout/screen_personalid_phone_verify.xml
+++ b/app/res/layout/screen_personalid_phone_verify.xml
@@ -12,7 +12,7 @@
         <ImageView
             android:id="@+id/company_logo"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/personalid_logo_height"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="40dp"
             android:contentDescription="@null"
