--- a/app/res/layout/fragment_recovery_code.xml
+++ b/app/res/layout/fragment_recovery_code.xml
@@ -2,11 +2,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <ScrollView
         android:background="@color/white"
-        android:orientation="vertical">
+        android:fillViewport="true"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent">
+
+        <RelativeLayout
+            android:background="@color/white"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:orientation="vertical">
 
         <ImageView
             android:id="@+id/company_logo"
@@ -26,11 +32,38 @@
             android:layout_marginTop="40dp"
             android:background="@android:color/darker_gray" />
 
+        <LinearLayout
+            android:id="@+id/welcome_back_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_below="@id/divider"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp">
+            <ImageView
+                android:id="@+id/user_photo"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:contentDescription="@null"
+                android:src="@drawable/baseline_person_24" />
+            <TextView
+                android:id="@+id/welcome_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:layout_marginStart="16dp"
+                android:layout_gravity="center"
+                android:layout_marginEnd="16dp"
+                android:text="@string/welcome_back_msg"
+                android:textColor="@color/connect_dark_blue_color"
+                android:textSize="18sp" />
+        </LinearLayout>
+
         <TextView
             android:id="@+id/recovery_code_tilte"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/divider"
+            android:layout_below="@id/welcome_back_layout"
             android:textStyle="bold"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
@@ -158,22 +191,38 @@
             android:textColor="@color/red"
             android:textSize="16sp" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/connect_pin_button"
-            style="@style/CustomButtonStyle"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/connect_pin_error_message"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
-            android:gravity="start|center"
-            android:text="@string/review"
-            android:drawableRight="@drawable/connect_right_arrow"
-            />
+            android:orientation="horizontal"
+            android:layout_below="@id/connect_pin_error_message">
 
+            <TextView
+                android:id="@+id/isntme_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/this_is_not_me"
+                android:layout_weight="1"
+                android:textColor="@color/cc_brand_color"
+                android:layout_marginStart="16dp"
+                android:clickable="true"
+                android:textStyle="bold"
+                android:layout_gravity="center"/>
 
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/connect_pin_button"
+                style="@style/CustomButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
+                android:gravity="end"
+                android:text="@string/review"
+                android:drawableRight="@drawable/connect_right_arrow"
+                />
+        </LinearLayout>
     </RelativeLayout>
+    </ScrollView>
 </layout>
