--- a/app/res/layout/select_install_mode_fragment.xml
+++ b/app/res/layout/select_install_mode_fragment.xml
@@ -29,6 +29,17 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:textStyle="bold"
+                    android:id="@+id/connect_error_msg"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="@dimen/content_min_margin"
+                    android:textColor="@color/red_500"
+                    android:visibility="gone"
+                    android:textSize="@dimen/text_medium" />
+
+                <TextView
                     android:id="@+id/str_setup_message"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
