--- a/app/res/layout/screen_personalid_name.xml
+++ b/app/res/layout/screen_personalid_name.xml
@@ -16,14 +16,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/company_logo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="60dp"
-                    android:layout_gravity="center"
-                    android:padding="16dp"
-                    android:src="@drawable/commcare_connect_logo" />
+                <include layout="@layout/grid_header_top_banner"/>
 
                 <View
                     android:id="@+id/divider"
