--- a/app/res/layout/screen_personalid_phone_verify.xml
+++ b/app/res/layout/screen_personalid_phone_verify.xml
@@ -9,14 +9,7 @@
         android:background="@color/white"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/company_logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="40dp"
-            android:contentDescription="@null"
-            android:src="@drawable/commcare_connect_logo" />
+        <include layout="@layout/grid_header_top_banner"/>
 
         <View
             android:id="@+id/divider"
