- Restricted demo user from sending firebase otp

--- a/app/res/navigation/nav_graph_personalid.xml
+++ b/app/res/navigation/nav_graph_personalid.xml
@@ -10,6 +10,10 @@
         android:name="org.commcare.fragments.personalId.PersonalIdBiometricConfigFragment"
         android:label="fragment_personalid_biometric_config"
         tools:layout="@layout/screen_personalid_verify">
+        <argument
+            android:name="isDemoUser"
+            app:argType="boolean"
+            android:defaultValue="false" />
         <action
             android:id="@+id/action_personalid_biometric_config_to_personalid_otp_page"
             app:destination="@id/personalid_otp_page"
@@ -17,6 +21,10 @@
         <action
             android:id="@+id/action_personalid_biometric_config_to_personalid_message"
             app:destination="@id/personalid_message_display"
+            app:popUpTo="@id/personalid_biometric_config" />
+        <action
+            android:id="@+id/action_personalid_biometric_config_to_personalid_name"
+            app:destination="@id/personalid_name"
             app:popUpTo="@id/personalid_biometric_config" />
     </fragment>
 
@@ -140,7 +148,7 @@
             app:destination="@id/personalid_message_display" />
         <action
             android:id="@+id/action_personalid_phone_fragment_to_personalid_biometric_config"
-            app:destination="@id/personalid_biometric_config" />
+            app:destination="@id/personalid_biometric_config"/>
         <action
             android:id="@+id/action_personalid_phone_fragment_self"
             app:destination="@id/personalid_phone_fragment" />
