--- a/app/res/layout/fragment_recovery_code.xml
+++ b/app/res/layout/fragment_recovery_code.xml
@@ -184,7 +184,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/isntme_button"
+                android:id="@+id/not_me_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/this_is_not_me"
