--- a/app/res/navigation/nav_graph_personalid.xml
+++ b/app/res/navigation/nav_graph_personalid.xml
@@ -33,10 +33,6 @@
             android:id="@+id/action_personalid_otp_page_to_personalid_message"
             app:destination="@id/personalid_message_display"
             app:popUpTo="@id/personalid_otp_page" />
-        <argument
-            android:name="primaryPhone"
-            app:argType="string"
-            app:nullable="true" />
         <action
             android:id="@+id/action_personalid_otp_page_to_personalid_name"
             app:destination="@id/personalid_name" />
@@ -85,14 +81,6 @@
             app:argType="string"
             app:nullable="true" />
         <argument
-            android:name="phone"
-            app:argType="string"
-            app:nullable="true" />
-        <argument
-            android:name="password"
-            app:argType="string"
-            app:nullable="true" />
-        <argument
             android:name="isCancellable"
             android:defaultValue="true"
             app:argType="boolean" />
@@ -120,18 +108,6 @@
             android:id="@+id/action_personalid_pin_to_personalid_photo_capture"
             app:destination="@id/personalid_photo_capture"
             app:popUpTo="@id/personalid_backup_code" />
-        <argument
-            android:name="isRecovery"
-            app:argType="boolean"
-            android:defaultValue="false"
-            />
-        <argument
-            android:name="name"
-            app:argType="string"/>
-        <argument
-            android:name="photo"
-            app:argType="string"
-            app:nullable="true"/>
     </fragment>
 
     <fragment
@@ -163,10 +139,8 @@
     <fragment
         android:id="@+id/personalid_photo_capture"
         android:name="org.commcare.fragments.personalId.PersonalIdPhotoCaptureFragment"
-        android:label="fragment_personalid_photo_capture">
-        <argument
-            android:name="userName"
-            app:argType="string" />
+        android:label="fragment_personalid_photo_capture"
+        tools:layout="@layout/screen_personalid_photo_capture">
         <action
             android:id="@+id/action_personalid_signup_fragment_self"
             app:destination="@id/personalid_photo_capture" />
