-refactored the variable names and method

--- a/app/res/layout/screen_personalid_phoneno.xml
+++ b/app/res/layout/screen_personalid_phoneno.xml
@@ -25,7 +25,7 @@
                 android:background="@color/connect_light_grey" />
 
             <TextView
-                android:id="@+id/phone_title"
+                android:id="@+id/backup_code_subtitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
