--- a/app/res/layout/fragment_recovery_code.xml
+++ b/app/res/layout/fragment_recovery_code.xml
@@ -64,7 +64,7 @@
 
         <TextView
             android:textStyle="bold"
-            android:id="@+id/phone_title"
+            android:id="@+id/backup_code_subtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
