--- a/app/res/navigation/nav_graph_personalid.xml
+++ b/app/res/navigation/nav_graph_personalid.xml
@@ -75,6 +75,7 @@
             app:nullable="false" />
         <argument
             android:name="buttonText"
+            app:nullable="false"
             app:argType="string" />
         <argument
             android:name="button2Text"
