--- a/app/res/layout/fragment_recovery_code.xml
+++ b/app/res/layout/fragment_recovery_code.xml
@@ -190,6 +190,7 @@
                     android:textColor="@color/cc_brand_color"
                     android:layout_marginStart="16dp"
                     android:clickable="true"
+                    android:layout_marginEnd="10dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/connect_backup_code_button"
