--- a/app/res/layout/fragment_connect_delivery_details.xml
+++ b/app/res/layout/fragment_connect_delivery_details.xml
@@ -160,16 +160,16 @@
                         android:background="@color/connect_darker_blue_color"
                         android:padding="16dp">
 
-                        <androidx.constraintlayout.widget.ConstraintLayout
+                        <LinearLayout
                             android:id="@+id/linearLayout"
-                            android:layout_width="0dp"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="vertical"
+                            app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             android:layout_marginEnd="2dp"
-                            app:layout_constraintEnd_toStartOf="@+id/connect_delivery_button"
-                            app:layout_constraintTop_toTopOf="parent">
+                            android:background="@color/connect_darker_blue_color">
 
                             <TextView
                                 android:id="@+id/connect_delivery_action_title"
@@ -192,21 +192,20 @@
                                 android:textColor="@color/grey"
                                 android:textSize="14sp" />
 
-                        </androidx.constraintlayout.widget.ConstraintLayout>
-
-                        <com.google.android.material.button.MaterialButton
-                            android:id="@+id/connect_delivery_button"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/connect_job_info_download"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            android:backgroundTint= "@color/white"
-                            android:drawableEnd= "@drawable/ic_connect_arrow_forward_20px"
-                            android:textColor= "@color/cc_brand_color"
-                            app:iconTint="@color/cc_brand_color"
-                            />
+                            <com.google.android.material.button.MaterialButton
+                                android:id="@+id/connect_delivery_button"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/connect_job_info_download"
+                                app:layout_constraintTop_toBottomOf="@id/connect_delivery_action_details"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                android:layout_gravity="end"
+                                android:backgroundTint= "@color/white"
+                                android:drawableEnd= "@drawable/ic_connect_arrow_forward_20px"
+                                android:textColor= "@color/cc_brand_color"
+                                app:iconTint="@color/cc_brand_color"
+                                />
+                        </LinearLayout>
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.cardview.widget.CardView>
             </androidx.constraintlayout.widget.ConstraintLayout>
