--- a/app/res/layout/fragment_connect_progress_delivery.xml
+++ b/app/res/layout/fragment_connect_progress_delivery.xml
@@ -150,7 +150,6 @@
                             android:text="@string/connect_click_to_sync_progress"
                             android:textColor="@color/black"
                             android:textSize="15sp"
-                            app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
 
@@ -161,7 +160,7 @@
                             android:text="@string/sync"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/connectRegularTextView"
                             android:drawableRight= "@drawable/ic_connect_directory_sync"
                             android:drawablePadding="5dp" />
 
