--- a/app/res/menu/menu_connect.xml
+++ b/app/res/menu/menu_connect.xml
@@ -9,7 +9,7 @@
     <item
         android:id="@+id/action_credential"
         android:icon="@drawable/ic_credential"
-        android:title="Credential"
+        android:title="@string/credential"
         app:showAsAction="always" />
     <item
         android:id="@+id/action_sync"
