-New worker history flow designs -Adapters and implementation of api -Designed view to share on whatsapp

--- a/app/res/layout/activity_personal_id_credential.xml
+++ b/app/res/layout/activity_personal_id_credential.xml
@@ -1,9 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.commcare.activities.connect.PersonalIdCredentialActivity">
+    android:background="@color/white">
 
-  </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:fillViewport="true"
+        android:scrollbars="none"
+        app:layout_constraintBottom_toTopOf="@id/tvLearnMore"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="16dp">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvNoCredentialsAvailable"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/personal_id_no_credentials"
+                android:fontFamily="@font/nunito_sans"
+                android:padding="10dp"
+                android:text="@string/no_credentials_currently_available"
+                android:textColor="@color/personal_id_no_credentials_txt"
+                android:textSize="13sp" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvEarnedCredentials"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:background="@color/personal_id_earned_credentials_txt"
+                android:fontFamily="@font/work_sans"
+                android:padding="10dp"
+                android:textColor="@color/personal_id_item_grey"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvNoCredentialsAvailable" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvEarnedCredential"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:layout_marginTop="20dp"
+                android:orientation="vertical"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvEarnedCredentials"
+                tools:itemCount="2"
+                tools:listitem="@layout/item_personal_id_credential" />
+
+            <androidx.constraintlayout.widget.Barrier
+                android:id="@+id/barrierEarnedCredentials"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:barrierDirection="bottom"
+                app:constraint_referenced_ids="tvEarnedCredentials,rvEarnedCredential" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvCredentialsYetToBeEarned"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:background="@color/personal_id_earned_credentials_txt"
+                android:fontFamily="@font/work_sans"
+                android:padding="10dp"
+                android:textColor="@color/personal_id_item_grey"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/barrierEarnedCredentials" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvYetToBeEarnedCredentials"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:layout_marginTop="20dp"
+                android:orientation="vertical"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvCredentialsYetToBeEarned"
+                tools:itemCount="1"
+                tools:listitem="@layout/item_personal_id_credential" />
+
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvLearnMore"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/bg_rounded_blue_70"
+        android:paddingHorizontal="40dp"
+        android:paddingVertical="10dp"
+        android:text="@string/learn_more_about_credentials"
+        android:textColor="@color/white"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
