--- a/app/res/values/styles.xml
+++ b/app/res/values/styles.xml
@@ -355,4 +355,9 @@
         <item name="android:textColor">@color/cc_brand_text</item>
     </style>
 
+    <style name="circleImageView" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
+    </style>
+
 </resources>
